# localstack-docker

./: .gitignore  Makefile  README.md  docker-compose.yml  lambda_function.py  pyproject.toml  requirements.txt  response.json
result/: response.json
upload/: lambda_function.py
