[tool.poetry]
name = "localstack-docker"
version = "0.1.0"
description = ""
authors = ["Subretu <subretu@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
